--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "express": "^4.18.1",
     "morgan": "^1.10.0",
     "sequelize": "^6.21.3",
-    "sequelize-cli": "^6.4.1"
+    "sequelize-cli": "^6.4.1",
+    "sqlite3": "^5.0.8"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
