--- a/package.json
+++ b/package.json
@@ -1,21 +1,27 @@
 {
-  "name": "auto-deploy",
-  "version": "1.0.0",
-  "description": "Automatically deploy applications to server using github webhooks",
-  "main": "index.js",
-  "license": "MIT",
-  "private": false,
-  "dependencies": {
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "morgan": "^1.10.0",
-    "sequelize": "^6.21.3",
-    "sequelize-cli": "^6.4.1",
-    "sqlite3": "^5.0.8"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/morgan": "^1.9.3",
-    "@types/sequelize": "^4.28.14"
-  }
+	"name": "auto-deploy",
+	"version": "1.0.0",
+	"description": "Automatically deploy applications to server using github webhooks",
+	"main": "index.js",
+	"license": "MIT",
+	"type": "module",
+	"private": false,
+	"scripts": {
+		"build": "tsc",
+		"start": "node --experimental-specifier-resolution=node build/index.js"
+	},
+	"dependencies": {
+		"dotenv": "^16.0.1",
+		"express": "^4.18.1",
+		"express-validator": "^6.14.2",
+		"morgan": "^1.10.0",
+		"sequelize": "^6.21.3",
+		"sequelize-cli": "^6.4.1",
+		"sqlite3": "^5.0.8"
+	},
+	"devDependencies": {
+		"@types/express": "^4.17.13",
+		"@types/morgan": "^1.9.3",
+		"@types/sequelize": "^4.28.14"
+	}
 }
